cdc-upstream/Service_camel-springboot-mysql-git-jdk11.yaml
kind: Service
apiVersion: v1
metadata:
  name: camel-springboot-mysql-git-jdk11
  labels:
    app: camel-springboot-mysql-git-jdk11
    app.kubernetes.io/component: camel-springboot-mysql-git-jdk11
    app.kubernetes.io/instance: camel-springboot-mysql-git-jdk11
    app.kubernetes.io/name: camel-springboot-mysql-git-jdk11
    app.kubernetes.io/part-of: camel-mysql
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
  annotations:
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: 'https://github.com/cykumar/camel-springboot-mysql.git'
    openshift.io/generated-by: OpenShiftWebConsole
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: 8443-tcp
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: 8778-tcp
      protocol: TCP
      port: 8778
      targetPort: 8778
  sessionAffinity: None
  selector:
    app: camel-springboot-mysql-git-jdk11
    deploymentconfig: camel-springboot-mysql-git-jdk11
